--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,3 +1,70 @@
-<p>
-  resume works!
-</p>
+<div class="container jumbotron" style="text-align:center;">
+ 
+  <h1>
+    {{ title }}
+  </h1>
+</div>
+<hr>
+
+
+<div class="container">  
+
+<h1>Sis Maharjan <img src="me.jpg" alt="profile picture" height=130 width=130 align="right"></h1>
+<p><em>Compututer Science Engineering at <strong>Jain University</strong>.</em></p>
+<p>I am a Web Developer learner.</p>
+</div>
+
+
+<div class="container">
+<a href="contact-me.html">Contact Me</a>
+<hr>
+<h3>Education Qualification</h3>
+<ul>
+  <li>Bachelors in Technology at <strong><a href="https://www.jainuniversity.ac.in/about">Jain University</a></strong>
+  </li>
+  <li>Cambridge GCE A-levels at <strong><a
+        href="https://www.facebook.com/sxcnotices/?__tn__=kC-R&eid=ARDgBoRUMpXJcrT-WmgvpmRcjNDL_aJ87hywzyZy0A1kfKIK2SVc-eXdXMMFJ6UV5GfPTac0r_l_UOVk&hc_ref=ARQ3cqV_2nXBxOz4ijL4EUSPJq0cH7iSnWSZmBEU6hbbSuBydIOL8wT4eGnN3KD3Gnc&__xts__[0]=68.ARBd3W5ULWdY7MauxV-Qe-HdZkXsHsboZYJ_gi3Oz5Yor8CPWRhoKI6gtvUGmFX1M3AzvStkr6gUyvIJ4PwG9zdLRMvlths2JSWiODXx9uWtQe9EYtkHgy09uuNAeLR188b0GuyEbSHhuBCBn63vygH1cOg8Bnm26Qoe18x3eOIokFqgK9eMdv58UaOnW_pG3Pnh8oPjEzwJwfZfckLee8eXG-0y1bt8ruANN1TecsLIHl4R2rLAZ3p2t5vhs74xmEJtfUFQq5_9ClgY1KxygEw9HSNPGuysFv8iOAiz8h0fuYJuLKKN8jUQujZsx-gAXwAzkGXePMSjT3F872BTdi2WF7dU4odJ5MUqLQqabwvXCsZ6lyU_-o88nHlcRhQ70M7_CthNjEZRsQpVHmoQrCmCekywo42f8OD9s86DjBW7LuFFUDE5zq1SDbeFozNEr3Gs_c36g0QbwySwHUvdw9AQp3uyzVfVCoGTMBpeuCJdRTL8XWjI">St.Xaviers
+        College</a></strong></li>
+  <li>S.L.C. Graduated from <strong><a href="https://www.facebook.com/AVMHS/">Aadarsha Vidhya Mandir H.S.
+        School</a></strong> </li>
+</ul>
+<hr>
+<h3>Technical Skills</h3>
+<ul>
+  <li>Programming Language: <strong>C, C++, Java, Python</strong></li>
+  <li>Scripting Language: <strong>HTML, CSS, JAVASCRIPT, PHP</strong></li>
+  <li>CCNA trained using <strong>Cisco Packet Tracer</strong></li>
+  <li>Image processing using <strong>MATLAB</strong></li>
+  <li>Microsoft Office: <strong>Word, Excel, Powerpoint</strong></li>
+  <LI>Photoshop</LI>
+</ul>
+<hr>
+<h3>Non-Technical Skills</h3>
+<ul>
+  <li>Language: <strong>English, Nepali, Newari, Hindi</strong></li>
+</ul>
+<table>
+  <hr>
+  <h3>Work Experience</h3>
+  <thead>
+    <tr>
+      <th>Dates</th>
+      <th>Work</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>2015</td>
+      <td>S & S Engineering Consultancy Intern</td>
+    </tr>
+  </tbody>
+  <tfoot>
+
+  </tfoot>
+
+</table>
+</div>
+
+
+
+  
