--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,28 +1,28 @@
 <div class="container">
-<div class="jumbotron">
-  <h1>Who Am I?</h1>
-  
-</div>
-
-  <div class="fontfam">
-  <p> &nbsp;&nbsp;&nbsp; &nbsp; Hi, I'm Sis. I design & build beutiful, usable websites. All my sites are hand coded.</p>
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;I’m an undergraduate, currently pursuing my final year of Bachelors in Technology(B.Tech) in Computer Science and Engineering. I'm constantly learning web technologies and other design related topics, currently playing around with Javascript- Angular. I'm skilled in many areas of design and development. Some of my skills are HTML5, CSS, Javascript, Bootstrap, Photoshop.</p>
-  <ul>
-    <li> HTML5, CSS3, SASS</li>
-    <li>Expression Engine</li>
-    <li>Wordpress</li>
-    <li>Shopify E-commerce platform</li>
-    <li>Working with JQuery plugins</li>
-    <li>Responsive Web Design</li>
-    <li>Bootstrap and Foundation frameworks</li>
-    <li>Jekyll</li>
-    <li>Liquid</li>
-    <li>Markdown</li>
-    <li>Modo</li>
-    <li>Unreal Engine</li>
-    <li>ZBrush</li>
-    <li>Photoshop, Illustrator, Sketch</li>
-  </ul>
+  <div class="jumbotron">
+    <h1>Who Am I?</h1>
   </div>
 
+  <div class="fontfam">
+    <p style="text-align: center;">
+      Hi, I'm Sis. I design & build beutiful, usable websites. All my sites are
+      hand coded.
+    </p>
+    <p style="text-align: justify;">
+      I’m an undergraduate, currently pursuing my final year of Bachelors in
+      Technology(B.Tech) in Computer Science and Engineering. I'm constantly
+      learning web technologies and other design related topics, currently
+      playing around with Javascript- Angular. I'm skilled in many areas of
+      design and development. Some of my skills are HTML5, CSS, Javascript,
+      Bootstrap, Photoshop.
+    </p>
+
+    <ul>
+      <li>HTML5, CSS3, Javascript</li>
+      <li>Responsive Web Design</li>
+      <li>Bootstrap</li>
+      <li>Angular</li>
+      <li>Photoshop</li>
+    </ul>
+  </div>
 </div>
